--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,1 +1,1 @@
-{"phone":"(999) 999-9999","email":"erer","instagram":null}
+{"phone":"(999) 999-9999","email":"erer","instagram":null,"working_hours":"\u0441 9 \u0434\u043e 10"}
